# fullstack

./: .cz.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .sops.yaml  .yamlfmt  .yamllint.yaml  404.html  ARGOCD_APPLICATION_DEPLOYMENT_GUIDE.md  NEW_CLUSTER_PROVISIONING.md  README.md  Taskfile.yaml  argo.yaml  devbox.json  docs-requirements.txt  hydrator.metadata  index.html  mise.toml  mkdocs.yml  pyproject.toml  test.yaml
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yaml  renovate.json  renovate.json.bak
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  feature-request.yaml  help-request.yaml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  argocd-diff-preview.yaml  argocd-diff-preview.yml  auto-hydrate-pr.yaml  helm-rmp.yaml  kustomize-rmp.yaml  label-sync.yaml  mkdocs.yaml  pre-commit.yaml  rendered-manifest-pattern.yaml  renovate.yml
.renovate/: automerge.json  cluster.json  common.json  custom-managers.json  groups.json  package-rules.json
.task/checksum/: mkdocs-deploy
.taskfiles/: ClusterProvisioning.yml
.taskfiles/authentik/: Taskfile.yaml
.taskfiles/eso/: Taskfile.yaml
authentik/: Chart.yaml
docs/: CNAME  FULL_DOCUMENTATION.md  PDF_GENERATION.md  git-summary.md  index.md  mermaid-test.md  requirements.txt
external-secrets/: Chart.yaml
homarr/: Chart.yaml  README.md  README_CONFIG.md.gotmpl  values.yaml
k3d-home/: Taskfile.yaml  k3d-template.yaml
scripts/: generate_git_summary.py  generate_pdf_docs.py
search/: search_index.json
stylesheets/: extra.css
(+2923 files in other folders)
