[project]
name = "fullstack"
version = "0.1.0"
description = "HomeLab GitOps tooling — Python dev dependencies"
requires-python = ">=3.12"
dependencies = [
  # ── MkDocs documentation stack ────────────────────────────────────────────
  "mkdocs-material>=9",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-committers-plugin-2",
  "mkdocs-git-authors-plugin",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-minify-plugin",
  # ── Linting & commit tooling ──────────────────────────────────────────────
  "yamllint",
  "pre-commit",
  "commitizen",
  # ── GitGuardian (used in pre-commit hooks) ────────────────────────────────
  "pygitguardian",
  "oauthlib",
  "cffi",
  "truststore",
]
